backend-service.yaml
apiVersion: v1
kind: Service
metadata:
    labels: 
        name: looped-in-backend-service
    name: looped-in-backend-service
spec:
    type: LoadBalancer
    ports:
        - port : 3000
          targetPort : 3000
          protocol : TCP
    selector:
        name: looped-in-v3
