react-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: react
  name: react
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: react
  type: LoadBalancer
status:
  loadBalancer: {}
